# enzymeml-suite

./: .gitignore  README.md  diagram.drawio  enzmldoc_test.json  eslint.config.ts  index_simulation.html  index_visualisation.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yaml  release.yaml
jupyter-templates/: Basic.ipynb  BayesianInference.ipynb  COPASI.ipynb  NeuralODE.ipynb  ParameterEstimation.ipynb  PySCeS.ipynb  SurrogateBayesianInference.ipynb  UniversalODE.ipynb  Visualisation.ipynb  _templates.json
src/: App.css  App.tsx  qodana.sarif.json  types.ts
src-tauri/: .gitignore  Cargo.toml  Rocket.toml  diesel.toml  enzymeml.json  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/icons/AppIcon.appiconset/: Contents.json
src-tauri/mcp/enzymeml-mcp-x86_64-apple-darwin/: README.md
src-tauri/mcp/enzymeml-mcp-x86_64-pc-windows-msvc/: README.md
src-tauri/migrations/2024-07-05-085417_enzymeml-suite/: down.sql  up.sql
src-tauri/migrations/2025-03-09-012908_enzymeml-suite/: down.sql  up.sql
src-tauri/model/: model.md
src-tauri/src/: api.rs  dataio.rs  db.rs  docutils.rs  main.rs  mcp.rs  models.rs  schema.rs  states.rs  unit.rs
src-tauri/src/actions/: enzmldoc.rs  equations.rs  identifiers.rs  jupyter.rs  macros.rs  mcp.rs  measurements.rs  parameters.rs  proteins.rs  reactions.rs  settings.rs  simulation.rs  smallmols.rs  units.rs  utils.rs  validation.rs  vessels.rs  windows.rs
src-tauri/src/io/: dataio.rs  dbops.rs  macros.rs  stringarray.rs
src/animations/: Grow.tsx  Reveal.tsx
src/commands/: dataio.ts  dbops.ts  enzmldoc.ts  equations.ts  jupyter.ts  mcp.ts  measurements.ts  parameters.ts  proteins.ts  reactions.ts  settings.ts  simulation.ts  smallmols.ts  units.ts  validation.ts  vessels.ts  visualisation.ts
src/components/: AIClientSelector.tsx  BaseMenu.tsx  CardHeader.tsx  CardTitle.tsx  Collection.tsx  CollectionNav.tsx  DBEntryRow.tsx  DataFetch.tsx  DataProvider.tsx  DetailButtons.tsx  DetailHeader.tsx  DetailView.tsx  EmptyPage.tsx  EquationInput.tsx  FileMenu.tsx  FloatingCreate.tsx  Footer.tsx  FormBase.tsx  LatexRenderer.tsx  LineChart.tsx  MainMenu.tsx  MathField.tsx  McpBinaryInstallation.tsx  NotificationProvider.tsx  QuantityForm.tsx  SpeciesReference.tsx  SubMenu.tsx  TitleBar.tsx  UserSettings.tsx  WindowBase.tsx  WindowFrame.tsx  cardheading.tsx  datafetch.tsx
src/components/styles/: equation.css
src/home/: Home.tsx  home.tsx
src/home/components/: CreateDropdown.tsx  HomeOverviewTable.tsx
src/hooks/: useKeyboardShortcuts.ts  useTauriListener.ts
src/jupyter/: Jupyter.tsx  utils.ts
src/jupyter/components/: Installation.tsx  PythonMenuItem.tsx  SessionItem.tsx  SessionList.tsx  Sessions.tsx  TemplateButton.tsx  TemplateLabel.tsx
src/kineticlaw/: KineticLawBuilder.tsx  KineticLawDisplay.tsx  kineticLaws.ts  utils.ts
src/kineticlaw/assets/: kineticLaws.json
src/kineticlaw/components/: CollapsibleParametersCard.tsx  KineticLawMenu.tsx  Selector.tsx  SpeciesAssignmentCard.tsx  SpeciesMapping.tsx  SpeciesSelector.tsx  index.ts  utils.ts
src/llm/: ExtractModal.tsx  ExtractionFlow.tsx
src/llm/components/: ButtonBar.tsx  ExtractedItemListItem.tsx  ExtractionResults.tsx  InputView.css  InputView.tsx  ModelSelector.tsx  ProcessingView.tsx  ToolSelector.tsx
src/measurements/: MeasurementForm.tsx  Measurements.tsx  measurement.tsx  style.css
src/modelling/: Modelling.tsx  form-config.ts  types.ts
src/models/: EquationForm.tsx  Equations.tsx  Model.tsx  ModelForm.tsx  Models.tsx  ParameterForm.tsx  Parameters.tsx  models.tsx  utils.ts
src/parameters/: Parameters.tsx
src/proteins/: ProteinForm.tsx  Proteins.tsx  fetchutils.ts  proteins.tsx
src/reactions/: ReactionForm.tsx  Reactions.tsx  reactions.tsx  types.ts  utils.ts
src/shims/: fs.ts  stream.ts
src/simulation/: Plot.tsx  SimWindow.tsx  Simulation.tsx  plot.tsx  simulation.tsx  simwindow.tsx
src/smallmols/: SmallMoleculeForm.tsx  SmallMolecules.tsx  fetchutils.ts  smallmols.tsx
src/stores/: appstore.ts  configstore.ts  jupyterstore.ts  llmstore.ts  refstore.ts  stylestore.ts  vizstore.ts
src/tauri/: listener.ts
src/types/: context.ts  options.ts  types.ts
src/utilities/: dbutils.tsx  equationutils.ts  osutils.ts
src/validation/: Validation.tsx  ValidationModal.tsx  utils.ts
src/vessels/: VesselForm.tsx  Vessels.tsx  vessels.tsx
src/visualisation/: Options.tsx  Select.tsx  VisWindow.tsx  Visualisation.tsx  themes.ts
viswindow/: index.html
(+33 files in other folders)
