[package]
name = "enzymeml-dashboard"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enzymeml = { version = "0.1.3", git = "https://github.com/EnzymeML/enzymeml-rs.git", branch = "master" }
derive_builder = "0.20.0"
schemars = "1.0.4"
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
dotenvy = "0.15"
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
dirs = "6.0.0"
tokio = { version = "1.38.0", features = ["full"] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_cors = "0.6.0"
simplelog = "0.12.2"
log = "0.4.22"
meval = "0.2.0"
open = "5.3.0"
diesel = { version = "2.2.12", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-cors-fetch = "4.1.0"
tauri-plugin-stronghold = "2"
machine-uid = "0.5"
tauri-plugin-store = "2"
regex = "1.11.2"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta = "=2.0.0-rc.22"
tauri-plugin-opener = "2"
lazy_static = "1.5.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
